--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         </dependency>
     </dependencies>
     <build>
+        <finalName>lt-filter</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
