--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,5 @@
 {
-    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-    "extends": [
-        "config:recommended",
-        "group:all"
-    ],
-    "schedule": ["after 5pm on friday"]
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": ["config:recommended", "group:all"],
+  "schedule": ["after 5pm on friday"]
 }
