--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,22 +93,21 @@ jobs:
         run: |
           echo "Testing --disable-rules (append mode)"
           java -jar bin/lt-filter.jar --disable-rules COMMA_PARENTHESIS_WHITESPACE testdata/input.txt > disable-rules-test.txt 2>&1
+          diff disable-rules-test.txt testdata/disable-rules-expected.txt
           echo "Testing --disable-rules-replace (replace mode)"
           java -jar bin/lt-filter.jar --disable-rules-replace SER_ESSER testdata/input.txt > disable-rules-replace-test.txt 2>&1
-          echo "Testing help shows new options"
-          java -jar bin/lt-filter.jar --help | grep -q "disable-rules"
+          diff disable-rules-replace-test.txt testdata/disable-rules-replace-expected.txt
 
       - name: Test rule-names functionality
         run: |
           echo "Testing --rule-names with flagged sentences"
           java -jar bin/lt-filter.jar --flagged --rule-names testdata/flagged.txt > rule-names-test.txt
-          echo "Verify rule names are included in output"
-          grep -q "\[.*\]" rule-names-test.txt
+          diff rule-names-test.txt testdata/rule-names-expected.txt
           echo "Testing --rule-names help shows the option"
           java -jar bin/lt-filter.jar --help | grep -q "rule-names"
           echo "Testing --rule-names via Node.js wrapper"
           node bin/lt-filter.js --flagged --rule-names testdata/flagged.txt > rule-names-node-test.txt
-          grep -q "\[.*\]" rule-names-node-test.txt
+          diff rule-names-node-test.txt testdata/rule-names-expected.txt
 
       - name: Test server functionality
         run: |
